// Delivery Review & Store Insight MVP — ERD (DBML)
// dbdiagram.io > New Diagram > 이 파일 내용을 통째로 붙여넣기
// 정본은 저장소 루트의 schema.sql — 이 파일은 그걸 시각화용으로 옮긴 것.

Project delivery_review_store_insight {
  database_type: 'PostgreSQL'
  Note: '''
    배달매장 사장을 위한 DB 설계 중심 MVP.
    외부 API 연동 없이 Mock 데이터로 동작하며, ACoS(광고비율) 계산만 실제 공식을 쓴다.
    광고 순위 모니터링의 반경별(distance_km) 순위만 예외적으로 실기기 크롤링(Appium)으로 실측한다.
  '''
}

Table users {
  id               bigint       [pk, increment]
  email            varchar(255) [not null, unique]
  password_hash    varchar(255) [not null, note: 'bcrypt']
  nickname         varchar(50)  [not null]
  phone_hash       char(64)     [note: 'SHA-256 hex. 전화번호 원문 저장 금지']
  marketing_agreed boolean      [not null, default: false]
  created_at       timestamptz  [not null, default: `now()`]

  Note: '사장 계정. 개인정보 최소화 — 전화번호는 phone_hash로만 저장, 주민번호/실명 없음.'
}

Table stores {
  id         bigint       [pk, increment]
  user_id    bigint       [not null]
  name       varchar(100) [not null]
  category   varchar(30)  [not null, note: '치킨, 닭갈비 등 — 광고 카테고리와 동일 체계']
  address    varchar(200)
  created_at timestamptz  [not null, default: `now()`]

  Note: '매장 정보. users 1:N stores.'
}

Table platforms {
  id                      int          [pk, increment]
  code                    varchar(20)  [not null, unique, note: 'baemin | coupang_eats | yogiyo']
  name                    varchar(50)  [not null]
  brand_color             varchar(7)   [note: '화면 뱃지용 HEX']
  default_commission_rate decimal(5,4) [note: '0.0680 = 6.8%']

  Note: '배달 플랫폼 마스터. 로고/수수료율 확장 대비 테이블화.'
}

Table store_platform_connections {
  id                bigint      [pk, increment]
  store_id          bigint      [not null]
  platform_id       int         [not null]
  platform_store_id varchar(30) [not null, note: 'Mock 스토어 아이디']
  business_number   varchar(20) [note: 'Mock 사업자번호']
  connected_at      timestamptz [not null, default: `now()`]

  indexes {
    (store_id, platform_id) [unique]
  }

  Note: '매장 ↔ 플랫폼 N:M 중간 테이블 (가게 연결 화면).'
}

Table subscriptions {
  id                bigint      [pk, increment]
  user_id           bigint      [not null, unique]
  plan              varchar(10) [not null, default: 'basic', note: 'basic | pro']
  daily_reply_limit int         [not null, default: 10]
  started_at        date        [not null]
  expires_at        date        [note: 'NULL = 무기한(무료 플랜)']

  Note: 'Basic/Pro 플랜, 하루 답글 생성 한도. 결제 플로우는 범위 외.'
}

Table reply_styles {
  id            int          [pk, increment]
  name          varchar(30)  [not null, unique, note: '발랄 이모지 파티 / 진중맨 / 무난 요정 / 진지한 하이개그']
  description   varchar(200) [not null]
  template_high text         [not null, note: '4~5점 리뷰용 템플릿']
  template_mid  text         [not null, note: '3점 리뷰용 템플릿']
  template_low  text         [not null, note: '1~2점 리뷰용 템플릿']

  Note: '답글 말투 스타일 마스터. 답글 생성은 템플릿 기반 Mock.'
}

Table reply_settings {
  id                    bigint   [pk, increment]
  store_id              bigint   [not null, unique]
  style_id              int      [not null]
  promo_text            varchar(400)
  include_nickname      boolean  [not null, default: true]
  include_menu          boolean  [not null, default: true]
  include_store_name    boolean  [not null, default: true]
  promo_on_negative     boolean  [not null, default: false, note: '부정 리뷰에도 홍보 문구 포함 여부']
  auto_reply_enabled    boolean  [not null, default: false, note: 'Mock — 실제 자동 등록 안 함']
  auto_reply_min_rating smallint [not null, default: 1, note: '1~5']

  Note: '가게별 답글 설정. stores 1:1.'
}

Table orders {
  id           bigint       [pk, increment]
  store_id     bigint       [not null]
  platform_id  int          [not null]
  order_no     varchar(30)  [not null, unique, note: 'Mock 주문번호']
  ordered_at   timestamptz  [not null]
  menu_summary varchar(200) [not null]
  order_type   varchar(10)  [not null, note: 'delivery | takeout']
  amount       int          [not null, note: '주문금액(원)']

  indexes {
    (store_id, ordered_at)
    (platform_id, ordered_at)
  }

  Note: '주문내역. stores 1:N orders.'
}

Table reviews {
  id                   bigint      [pk, increment]
  order_id             bigint      [not null, unique]
  rating               smallint    [not null, note: '1~5']
  content              text        [not null]
  customer_nickname    varchar(50) [not null, note: '닉네임만 저장, 실명 아님']
  customer_order_count int         [not null, default: 1]
  status               varchar(12) [not null, default: 'unanswered', note: 'unanswered | pending | answered']
  created_at           timestamptz [not null]

  indexes {
    status
  }

  Note: '리뷰. orders 1:1 reviews — reviews.order_id가 핵심 외래키.'
}

Table review_replies {
  id         bigint      [pk, increment]
  review_id  bigint      [not null]
  reply_type varchar(10) [not null, note: 'ai_draft | final | secondary']
  style_id   int         [note: '생성 당시 스타일(이력 보존) — 스타일 삭제돼도 NULL로 남김']
  content    text        [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    review_id
  }

  Note: 'AI 추천 답글 Mock + 사장 최종 답글 + 2차 답글. reviews 1:N.'
}

Table daily_settlements {
  id             bigint [pk, increment]
  store_id       bigint [not null]
  platform_id    int    [not null]
  settle_date    date   [not null]
  sales_amount   int    [not null, default: 0, note: '그날 발생한 매출액(원)']
  deposit_amount int    [not null, default: 0, note: '그날 실제 입금액(원) — 정산 지연 반영']

  indexes {
    (store_id, platform_id, settle_date) [unique]
  }

  Note: '''
    일별 매출 + 입금을 함께 저장.
    매출 요약은 별도 테이블로 두지 않는다 — 기간별 집계는 이 테이블을 조회 시점에 계산한다
    (요약을 물리 테이블로 중복 저장하면 원본과 불일치가 생기기 때문).
  '''
}

Table repurchase_metrics {
  id            bigint       [pk, increment]
  store_id      bigint       [not null]
  platform_id   int          [not null]
  metric_date   date         [not null]
  new_orders    int          [not null, default: 0]
  repeat_orders int          [not null, default: 0]
  rate_raw      decimal(5,4) [not null, note: '보정 전. 0~1 (25.5% = 0.2550)']
  rate_adjusted decimal(5,4) [not null, note: '보정 후(직전 7일 합산). 0~1']

  indexes {
    (store_id, platform_id, metric_date) [unique]
  }

  Note: '날짜별 재주문율(보정 전/후), 신규/재주문 수.'
}

Table ad_campaigns {
  id          bigint      [pk, increment]
  store_id    bigint      [not null]
  category    varchar(30) [not null, note: '노출 카테고리 (예: 치킨)']
  current_cpc int         [not null, note: '현재 클릭당 단가(원)']
  target_rank smallint    [not null]
  status      varchar(10) [not null, default: 'active', note: 'active | paused']

  indexes {
    store_id
  }

  Note: '광고 캠페인. stores 1:N ad_campaigns.'
}

Table ad_performance_metrics {
  id          bigint [pk, increment]
  campaign_id bigint [not null]
  metric_date date   [not null]
  ad_spend    int    [not null, default: 0, note: '광고비(원)']
  clicks      int    [not null, default: 0]
  ad_orders   int    [not null, default: 0, note: '광고 경유 주문수']
  ad_revenue  int    [not null, default: 0, note: '광고 경유 매출(원)']

  indexes {
    (campaign_id, metric_date) [unique]
  }

  Note: '''
    일별 광고 성과 원본만 저장한다.
    CPC/CVR/AOV/ACoS/점수는 저장하지 않고 acos.py가 조회 시 실제 공식으로 계산한다:
      CPC = ad_spend / clicks
      CVR = ad_orders / clicks   (0~1 소수, 18.4% = 0.184)
      AOV = ad_revenue / ad_orders
      ACoS(%) = CPC / (CVR * AOV) * 100
  '''
}

Table ad_rank_snapshots {
  id                 bigint       [pk, increment]
  campaign_id        bigint       [not null]
  snapshot_at        timestamptz  [not null]
  current_rank       smallint     [not null]
  competitor_est_cpc int          [note: '경쟁 가게 예상 CPC — 시간별 Mock 스냅샷 전용, 실측 행은 NULL']
  status             varchar(12)  [note: 'normal | rank_dropped']
  recommended_action varchar(10)  [not null, default: 'keep', note: 'keep | raise_cpc | lower_cpc']
  suggested_cpc      int          [note: '추천 액션이 raise/lower일 때 제안 CPC']
  distance_km        decimal(4,2) [note: 'NULL=시간별 Mock 스냅샷, 값 있으면 반경 실측(crawler/)']
  point_label        varchar(20)  [note: "'0km', '1.5~2.5km' 등 — 실측 전용 표시 라벨"]
  total_scanned      smallint     [note: '실측 시 스캔한 리스트 항목 수']
  ads_above          smallint     [note: '실측 시 내 가게보다 위에 있던 광고 개수']

  indexes {
    (campaign_id, snapshot_at) [unique]
  }

  Note: '''
    순위 스냅샷. 두 종류가 한 테이블에 공존한다.
    (1) 시간별 Mock 스냅샷 (distance_km NULL): 수집됐다고 가정한 결과.
    (2) 반경별 실측 스냅샷 (distance_km NOT NULL): crawler/(Appium 실기기 자동화)로
        실제 배민 앱을 스크롤해 수집. 경쟁 가게 CPC는 실측 불가라 NULL.
  '''
}

Table alerts {
  id         bigint      [pk, increment]
  store_id   bigint      [not null]
  alert_type varchar(20) [not null, note: 'negative_review | unanswered_review | rank_drop']
  message    varchar(300) [not null]
  is_read    boolean     [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (store_id, is_read)
  }

  Note: '부정 리뷰 / 미답변 / 순위 하락 알림. 발송은 하지 않고 화면 표시만.'
}

// ----------------------------------------------------------------------------
// 관계 (FK + ON DELETE 정책)
//   cascade  — 부모에 종속된 소유 데이터
//   restrict — 마스터 테이블 보호 (참조 중이면 삭제 불가)
//   set null — 이력 보존
// ----------------------------------------------------------------------------

Ref: stores.user_id > users.id [delete: cascade]
Ref: store_platform_connections.store_id > stores.id [delete: cascade]
Ref: store_platform_connections.platform_id > platforms.id [delete: restrict]
Ref: subscriptions.user_id > users.id [delete: cascade]
Ref: reply_settings.store_id > stores.id [delete: cascade]
Ref: reply_settings.style_id > reply_styles.id [delete: restrict]
Ref: orders.store_id > stores.id [delete: cascade]
Ref: orders.platform_id > platforms.id [delete: restrict]
Ref: reviews.order_id > orders.id [delete: cascade]
Ref: review_replies.review_id > reviews.id [delete: cascade]
Ref: review_replies.style_id > reply_styles.id [delete: set null]
Ref: daily_settlements.store_id > stores.id [delete: cascade]
Ref: daily_settlements.platform_id > platforms.id [delete: restrict]
Ref: repurchase_metrics.store_id > stores.id [delete: cascade]
Ref: repurchase_metrics.platform_id > platforms.id [delete: restrict]
Ref: ad_campaigns.store_id > stores.id [delete: cascade]
Ref: ad_performance_metrics.campaign_id > ad_campaigns.id [delete: cascade]
Ref: ad_rank_snapshots.campaign_id > ad_campaigns.id [delete: cascade]
Ref: alerts.store_id > stores.id [delete: cascade]

// ----------------------------------------------------------------------------
// 그룹 (다이어그램 레이아웃 정리용)
// ----------------------------------------------------------------------------

TableGroup 계정_매장 {
  users
  stores
  subscriptions
}

TableGroup 플랫폼 {
  platforms
  store_platform_connections
}

TableGroup 리뷰_답글 {
  reviews
  review_replies
  reply_styles
  reply_settings
}

TableGroup 주문_매출 {
  orders
  daily_settlements
  repurchase_metrics
}

TableGroup 광고 {
  ad_campaigns
  ad_performance_metrics
  ad_rank_snapshots
}

TableGroup 알림 {
  alerts
}
